--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
+    "npm": "^8.2.0",
     "react": "^16.14.0",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^16.14.0",
